Git: add meff alias for merge --ff-only

--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -16,6 +16,7 @@
     ri = rebase --interactive --autosquash
     puff = pull --ff-only
     purr = pull --rebase
+    meff = merge --ff-only
     la = !git config -l | grep alias | cut -c 7-
     ds = diff --staged
     sur = submodule update --recursive
